[package]
name = "benda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "benda"
crate-type = ["cdylib"]

# Enable the `experimental-inspect` feature to be able to generate Typing to Python.
[dependencies]
pyo3 = { version = "0.21.2", features = [
    "extension-module",
    "experimental-inspect",
] }
bend-lang = "=0.2.33"
num-bigint = "0.4.5"
num-traits = "0.2.19"
rustpython-parser = "0.3.1"
# Bend uses a indexmap to store its ADTs.
# So we need to use this dependency to be able to construct one.
indexmap = "2.2.3"
