[package]
name = "benda"
description = "Use Bend language functions and capabilities in Python!"
license = "MIT"
version = "0.1.1"
edition = "2021"
readme = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "benda"
crate-type = ["cdylib"]


# "extension-module" feature is required to publish the module to PyPi.
[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
bend-lang = "=0.2.33"
num-bigint = "0.4.5"
num-traits = "0.2.19"
rustpython-parser = "0.3.1"
# Bend uses a indexmap to store its ADTs.
# So we need to use this dependency to be able to construct one.
indexmap = "2.2.3"
